--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/notes
+spring.datasource.url=jdbc:mysql://localhost:3306/notes?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.resources.static-locations=file:/home/ubuntu/projs/notesapp/server/upload-dir/
