--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/notes?useSSL=false
+#spring.datasource.url=jdbc:mysql://mfarajimail.c36irurunp6h.us-west-1.rds.amazonaws.com/innodb
+#spring.datasource.username=mfarajimail
+#spring.datasource.password=mfarajimail2000
 spring.datasource.username=root
 spring.datasource.password=root
+
+#spring.resources.static-locations=file:/home/ubuntu/projs/notesapp/server/upload-dir/
